Shows artist songs by albums - WIP

--- a/app/src/main/res/layout/album_song.xml
+++ b/app/src/main/res/layout/album_song.xml
@@ -1,38 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/artistItem"
+    android:id="@+id/songItem"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/addToPlaylist"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:background="?selectableItemBackground"
+        android:contentDescription="@string/add_to_playlist"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:src="@drawable/ic_playlist_add" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/songMore">
-
-        <ImageView
-            android:id="@+id/picture"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignBottom="@+id/songDuration"
-            android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/songName"
-            android:layout_marginRight="12dp"
-            android:visibility="visible"
-            app:srcCompat="@drawable/ic_audiotrack" />
+        android:layout_toStartOf="@+id/addToPlaylist">
 
         <TextView
             android:id="@+id/songName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_toEndOf="@+id/picture"
             android:singleLine="true"
-            android:text="Artist"
+            android:text="@string/song_name"
             android:textAppearance="?attr/textAppearanceListItem" />
 
         <TextView
@@ -43,7 +40,7 @@
             android:layout_below="@+id/songName"
             android:layout_marginBottom="8dp"
             android:singleLine="true"
-            android:text="42 songs" />
+            android:text="@string/song_duration" />
 
     </RelativeLayout>
 
