--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -30,15 +30,15 @@
             android:id="@+id/picture"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_alignBottom="@+id/songsCount"
+            android:layout_alignBottom="@+id/songDuration"
             android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/name"
+            android:layout_alignTop="@+id/songName"
             android:layout_marginRight="12dp"
             android:visibility="visible"
             app:srcCompat="@drawable/ic_audiotrack" />
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/songName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -47,11 +47,11 @@
             android:text="Item"
             android:textAppearance="?attr/textAppearanceListItem" />
 
-        <TextView android:id="@+id/songsCount"
+        <TextView android:id="@+id/songDuration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
-            android:layout_alignStart="@+id/name"
+            android:layout_below="@+id/songName"
+            android:layout_alignStart="@+id/songName"
             android:text="subtitle"
             android:layout_marginBottom="8dp"
             android:singleLine="true" />
