--- a/app/src/main/res/layout/activity_playing.xml
+++ b/app/src/main/res/layout/activity_playing.xml
@@ -73,7 +73,7 @@
                 android:layout_marginTop="10dp"
                 android:adjustViewBounds="false"
                 android:cropToPadding="false"
-                app:srcCompat="@drawable/ic_audiotrack" />
+                app:srcCompat="@mipmap/sneer2" />
 
             <TextView
                 android:id="@+id/playingSongName"
