--- a/app/src/main/res/layout/navbar.xml
+++ b/app/src/main/res/layout/navbar.xml
@@ -74,14 +74,14 @@
             android:text="99" />
 
         <TextView
+            android:id="@+id/samplerText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/sampler"
-            android:id="@+id/samplerText"
-            android:textAlignment="center"
             android:layout_below="@+id/samplerNavbarBtn"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:text="@string/sampler"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
     </RelativeLayout>
 
     <RelativeLayout
