--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -13,24 +13,28 @@
 
         <ImageView
             android:id="@+id/back"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:background="@android:color/transparent"
             android:contentDescription="@string/close_activity"
-            android:padding="12dp"
+            android:padding="16dp"
             android:src="@drawable/ic_arrow_back" />
 
         <TextView
-            android:id="@+id/artistBarTitle"
+            android:id="@+id/artistName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:text="@string/artist_bar_title"
+            android:layout_marginEnd="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@+id/back"
+            android:text="@string/artist_name"
             android:textAlignment="gravity"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 
@@ -63,24 +67,6 @@
                 android:paddingRight="12dp"
                 android:paddingTop="12dp">
 
-                <TextView
-                    android:id="@+id/songName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:text="@string/artist_name"
-                    android:textAlignment="center"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/songDuration"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/songName"
-                    android:text="@string/songs_count"
-                    android:textAlignment="center" />
-
             </RelativeLayout>
 
             <Button
@@ -89,18 +75,28 @@
                 android:layout_height="40dp"
                 android:layout_below="@+id/artistDetails"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="18dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="26dp"
                 android:background="@drawable/rounded_background"
                 android:backgroundTint="#01579b"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/shuffle_play" />
+
+            <TextView
+                android:id="@+id/artistSongsCount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/shufflePlay"
+                android:layout_centerHorizontal="true"
+                android:text="@string/songs_count"
+                android:textAlignment="center" />
 
             <LinearLayout
                 android:id="@+id/albums_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/shufflePlay"
+                android:layout_below="@+id/artistSongsCount"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
                 android:padding="12dp"></LinearLayout>
