Adds album art to playlist song item Fixes text blinking while updateState

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -87,6 +87,7 @@
                 android:layout_below="@+id/songName"
                 android:layout_marginBottom="8dp"
                 android:layout_toStartOf="@+id/drag"
+                android:freezesText="false"
                 android:singleLine="true"
                 android:text="Artist"
                 android:textColor="@android:color/darker_gray" />
