Fixes album art retrieve method Hides empty library message before state update Shows better splash screen Adds launcher icon

--- a/app/src/main/res/layout/library_recent.xml
+++ b/app/src/main/res/layout/library_recent.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
         android:clickable="true"
+        android:focusable="true"
         android:footerDividersEnabled="false" />
 
 </RelativeLayout>
