--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -49,7 +49,7 @@
             >
 
             <ImageView
-                android:id="@+id/picture"
+                android:id="@+id/artistPicture"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/picture"
+                android:layout_below="@+id/artistPicture"
                 android:orientation="vertical"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
