--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/songItem"
     android:layout_width="match_parent"
     android:layout_height="64dp"
-    android:id="@+id/songItem"
     android:paddingLeft="16dp">
 
     <ImageView
+        android:id="@+id/songMore"
         android:layout_width="56dp"
         android:layout_height="match_parent"
-        android:id="@+id/songMore"
-        android:src="@drawable/ic_playlist_add"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:contentDescription="Add to Playlist"
+        android:layout_alignParentTop="true"
         android:background="?selectableItemBackground"
         android:clickable="true"
+        android:contentDescription="Add to Playlist"
+        android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingLeft="16dp" />
+        android:src="@drawable/ic_playlist_add" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/songMore">
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/songMore"
+        android:clickable="true">
 
         <ImageView
             android:id="@+id/artistPicture"
